[gd_scene load_steps=2 format=3 uid="uid://bsdodxf0dd4d6"]

[ext_resource type="Script" uid="uid://dgb5mvqlasvj5" path="res://ChatClient.gd" id="1_wtcfe"]

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 369.0
script = ExtResource("1_wtcfe")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 7.0
offset_right = 807.0
offset_bottom = 344.0

[node name="HTTPRequest" type="HTTPRequest" parent="Control"]

[node name="ChatLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 42.0
offset_right = 807.0
offset_bottom = 443.0

[node name="InputBox" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 605.0
offset_right = 811.0
offset_bottom = 636.0

[connection signal="request_completed" from="Control/HTTPRequest" to="Control" method="_on_HTTPRequest_request_completed"]
